selectors to html structure

--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
 <body>
 
 <div class="container">
-    <header class="header__wrapper"><a href="" class="logo"><img src="" alt="" class="logo__link"></a>
-        <nav class="menu"><a href="" class="menu__item">item 1</a><a href="" class="menu__item">item 2</a><a href=""
-                                                                                                               class="menu__item">item
-            3</a><a href="" class="menu__item">item 4</a></nav>
+    <header class="header__wrapper">
+        <a href="" class="logo">
+            <img src="" alt="" class="logo__img">
+        </a>
+        <nav class="menu">
+            <a href="" class="menu__item">item 1</a>
+            <a href="" class="menu__item">item 2</a>
+            <a href="" class="menu__item">item 3</a>
+            <a href="" class="menu__item">item 4</a>
+        </nav>
     </header>
+</div>
 
     <main class="main__wrapper">
         <article class="mainArticle">
@@ -43,7 +50,7 @@
             <a href="" class="secondaryMenu__item">item 3</a>
             <a href="" class="secondaryMenu__item">item 4</a>
         </nav>
-        <p class="copyright">&#169</p>
+        <p class="copyright">&#169; 2023 YoYo</p>
     </footer>
 </div>
 
