--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div class="container">
+ <div class="container">
     <header class="header__wrapper">
         <a href="" class="logo">
             <img src="" alt="" class="logo__img">
@@ -23,7 +23,7 @@
             <a href="" class="menu__item">item 4</a>
         </nav>
     </header>
-</div>
+
 
     <main class="main__wrapper">
         <article class="mainArticle">
@@ -50,7 +50,7 @@
             <a href="" class="secondaryMenu__item">item 3</a>
             <a href="" class="secondaryMenu__item">item 4</a>
         </nav>
-        <p class="copyright">&#169; 2023 YoYo</p>
+        <p class="copyright">&#169; 2023 Firma Krzak</p>
     </footer>
 </div>
 
