add radius, change txt, add images file

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <img src="" alt="" class="logo__img">
         </a>
         <nav class="menu">
-            <a href="" class="menu__item">item 1</a>
-            <a href="" class="menu__item">item 2</a>
-            <a href="" class="menu__item">item 3</a>
-            <a href="" class="menu__item">item 4</a>
+            <a href="" class="menu__item">O nas</a>
+            <a href="" class="menu__item">Oferta</a>
+            <a href="" class="menu__item">Praca</a>
+            <a href="" class="menu__item">Kontakt</a>
         </nav>
     </header>
 
